# nix-esp32-hello-world

./: Cargo.toml  README.md  flake.nix  flake.orig
